examples/bad/bad_app_2.xp
# invalid application
main = 1 1;
